--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,11 @@
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="99dp"
+        android:layout_marginTop="160dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,43 +24,44 @@
         android:id="@+id/textView3"
         android:layout_width="217dp"
         android:layout_height="27dp"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="48dp"
         android:text="Informe seu Peso e Altura:"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.432"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/txtMetros"
         android:layout_width="86dp"
         android:layout_height="0dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="196dp"
         android:text="0,00 m"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.772"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBar4" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/btnConverter"
         android:layout_width="122dp"
         android:layout_height="36dp"
         android:layout_marginStart="44dp"
         android:layout_marginLeft="44dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="12dp"
         android:text="Converter"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/txtMetros" />
 
     <TextView
-        android:id="@+id/textView5"
-        android:layout_width="105dp"
-        android:layout_height="17dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="72dp"
-        android:layout_marginRight="72dp"
+        android:id="@+id/txtPes"
+        android:layout_width="100dp"
+        android:layout_height="21dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginRight="60dp"
         android:text="0,00 pé(s)"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/txtMetros" />
 </androidx.constraintlayout.widget.ConstraintLayout>
