--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
         android:text="0,00 m"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.772"
+        app:layout_constraintHorizontal_bias="0.615"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seekBar4" />
 
@@ -56,12 +56,24 @@
 
     <TextView
         android:id="@+id/txtPes"
-        android:layout_width="100dp"
-        android:layout_height="21dp"
+        android:layout_width="151dp"
+        android:layout_height="0dp"
         android:layout_marginTop="48dp"
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
         android:text="0,00 pé(s)"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtMetros" />
+
+    <TextView
+        android:id="@+id/txtMedia"
+        android:layout_width="132dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="76dp"
+        android:layout_marginRight="76dp"
+        android:text="Exercicio"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtPes" />
 </androidx.constraintlayout.widget.ConstraintLayout>
