--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txtMetros" />
 
     <TextView
-        android:id="@+id/txtMedia"
+        android:id="@+id/txtMedias"
         android:layout_width="132dp"
         android:layout_height="31dp"
         android:layout_marginTop="28dp"
@@ -76,4 +76,5 @@
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPes" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
